# esp32-idf-boilerplate

./: CMakeLists.txt  README.md  package.json  package.sh
.github/workflows/: push.yml  release.yml
main/: main.c
